// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTemplateFile returns domain-config when subdomains is an array 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<network-security-config>

    <domain-config cleartextTrafficPermitted=\\"true\\">
      <domain includeSubdomains=\\"true\\">localhost</domain>
    </domain-config>
  
</network-security-config>"
`;

exports[`getTemplateFile returns only base-config when subdomains is '*' 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<network-security-config>
<base-config cleartextTrafficPermitted=\\"true\\" />
</network-security-config>"
`;

exports[`withNetworkSecurityConfigManifest doesn't modify config if subdomains is an empty array 1`] = `
Object {
  "name": "foo",
  "slug": "bar",
}
`;

exports[`withNetworkSecurityConfigManifest modifies config if subdomains is not empty 1`] = `
Object {
  "mods": Object {
    "android": Object {
      "dangerous": [Function],
      "manifest": [Function],
    },
  },
  "name": "foo",
  "slug": "bar",
}
`;
